--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "leaflet": "^1.9.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.3.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.16",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@types/react-router-dom": "^5.3.3",
