feat: add user profile photos and avatar system
- Add Avatar component for displaying user photos - Implement photo upload functionality in UserProfile - Add file upload middleware and utilities - Update user model to include photoUrl - Update trip components to show user avatars - Add loading animation component - Update UI styling and backgrounds - Enhance collaborator management with avatars

--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.758.0",
+    "axios": "^1.8.2",
     "leaflet": "^1.9.4",
+    "multer-s3": "^3.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
