--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@aws-sdk/client-s3": "^3.758.0",
     "axios": "^1.8.2",
     "date-fns": "^4.1.0",
+    "handlebars": "^4.7.8",
     "leaflet": "^1.9.4",
     "multer-s3": "^3.0.1",
+    "puppeteer": "^24.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
