feat: improve AI suggestions formatting and history display - Clean up markdown formatting from AI suggestions - Add proper modal closing when selecting history items - Implement AI suggestions history feature with server endpoints

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "description": "",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.758.0",
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
     "axios": "^1.8.2",
     "date-fns": "^4.1.0",
     "express-session": "^1.18.1",
