--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.3.0",
+    "recharts": "^2.15.2",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
