--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@aws-sdk/client-s3": "^3.758.0",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@types/react-beautiful-dnd": "^13.1.8",
+    "@types/react-joyride": "^2.0.2",
     "axios": "^1.8.2",
     "date-fns": "^4.1.0",
     "express-session": "^1.18.1",
@@ -28,7 +30,9 @@
     "passport-google-oauth20": "^2.0.0",
     "puppeteer": "^24.4.0",
     "react": "^19.0.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^19.0.0",
+    "react-joyride": "^2.9.3",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.3.0",
     "recharts": "^2.15.2",
