Add collaborative notes feature with rich text editor, styling, and server-side support

--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "@aws-sdk/client-s3": "^3.758.0",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@tiptap/extension-task-item": "^2.11.7",
+    "@tiptap/extension-task-list": "^2.11.7",
+    "@tiptap/react": "^2.2.4",
+    "@tiptap/starter-kit": "^2.2.4",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-joyride": "^2.0.2",
     "axios": "^1.8.2",
@@ -25,6 +29,7 @@
     "express-session": "^1.18.1",
     "handlebars": "^4.7.8",
     "leaflet": "^1.9.4",
+    "lodash": "^4.17.21",
     "multer-s3": "^3.0.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
@@ -36,6 +41,7 @@
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.3.0",
     "recharts": "^2.15.2",
+    "socket.io-client": "^4.8.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
