--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-popover": "^1.1.11",
     "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-switch": "^1.2.2",
     "@tiptap/extension-task-item": "^2.11.7",
     "@tiptap/extension-task-list": "^2.11.7",
     "@tiptap/react": "^2.2.4",
@@ -37,6 +38,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "express-session": "^1.18.1",
+    "framer-motion": "^12.9.2",
     "handlebars": "^4.7.8",
     "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
@@ -50,9 +52,12 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.56.1",
+    "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-joyride": "^2.9.3",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.3.0",
+    "react-virtuoso": "^4.12.6",
     "recharts": "^2.15.2",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.2.0",
