refactor: move deprecated OldTripDetails to _deprecated folder and fix linter errors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,5 +31,6 @@
     "allowSyntheticDefaultImports": true
   },
   "include": ["src"],
+  "exclude": ["src/components/_deprecated/**/*"],
   "references": [{ "path": "./tsconfig.node.json" }]
 } 
